--- a/views/index.html
+++ b/views/index.html
@@ -1,11 +1,147 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
   <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>Bare - Start Bootstrap Template</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <style>
+      body {
+        padding-top: 54px;
+      }
+      @media (min-width: 992px) {
+        body {
+          padding-top: 56px;
+        }
+      }
+
+    </style>
+
   </head>
+
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#"><%= title %></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home
+                <span class="sr-only">(current)</span>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Services</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <style>
+      #responsive-chart{
+        max-width: 100%;
+        max-height: 300px;
+     }
+    </style>
+    <!-- Page Content -->
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h1 class="mt-5">Evolution of Dai in circulation</h1>
+          <p class="lead">This shows the evolution of the amount of Dai coins in circulation, what can be used to predict if the project is getting users adoption.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+          <div id="responsive-chart">
+            
+            <canvas id="myChart" width="540" height="300"></canvas>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="vendor/Chart.min.js"></script>
+    <script>
+        window.onload = function(){
+
+        };
+        var ctx = document.getElementById("myChart").getContext('2d');
+        
+        var myChart = new Chart(ctx, {
+              type: 'line',
+              data: {  
+                  labels: <%- JSON.stringify(data.prediccionDaily.labels) %> ,              
+                  datasets: [{
+                      label: '# of Dai in circulation',
+                      fill: false,
+                      // cubicInterpolationMode: 'default',
+                      borderColor: 'rgba(65, 101, 244,0.5)',
+                      data: <%- JSON.stringify(data.daily.data) %>
+                  },
+                  {
+                    label: 'Prediction (linear)',
+                      fill: false,
+                      // cubicInterpolationMode: 'default',
+                      borderColor: 'rgba(25, 193, 44,0.5)',
+                      data: <%- JSON.stringify(data.prediccionDaily.data) %>
+                  }
+                ]
+              },
+              options: {
+                  responsive: true,
+                  scales: {
+                      yAxes: [{
+                        display: true,
+                        scaleLabel:{
+                          display: true,
+                          labelString: 'Value'
+                        },
+                        ticks: {
+                          beginAtZero:false,
+                          callback: (value, index,values)=>{
+                            return '$'+ value.toFixed(2).replace(/(\d)(?=(\d{3})+\.)/g, '$1,');
+                          }
+                        }
+                      }],
+                      xAxes: [{
+                        display: true,
+                        scaleLabel: {
+                          display:true,
+                          labelString: 'Time'
+                        },
+                        ticks: {
+                              beginAtZero:true
+                          }
+                      }]
+                  }
+              }
+          });
+    </script>
   </body>
+
 </html>
