--- a/views/index.html
+++ b/views/index.html
@@ -57,12 +57,7 @@
         </div>
       </div>
     </nav>
-    <style>
-      #responsive-chart{
-        max-width: 100%;
-        max-height: 300px;
-     }
-    </style>
+ 
     <!-- Page Content -->
     <div class="container">
       <div class="row">
@@ -73,12 +68,26 @@
       </div>
       <div class="row">
         <div class="col-lg-12">
-          <div id="responsive-chart">
+    
             
             <canvas id="myChart" width="540" height="300"></canvas>
-          </div>
+     
+          
         </div>
 
+        
+
+      </div>
+      <div class="row">
+        <div class="col-lg-12">
+
+          <h1 class="mt-12">Growth rate</h1>
+          <p class="lead">Shows the % increment from the day before and from the beginning of data</p>
+          <ul class="list-unstyled">
+            <li>Growth from yesterday: <span><%- incrementFromLastDay %></span></li>
+            <li>Growth from First data: <span><%- incrementFromZero %></span></li>
+          </ul>
+        </div>
       </div>
     </div>
 
@@ -106,20 +115,37 @@
                   {
                     label: 'Prediction (linear)',
                       fill: false,
+                      yAxisID: 'A',
                       // cubicInterpolationMode: 'default',
                       borderColor: 'rgba(25, 193, 44,0.5)',
                       data: <%- JSON.stringify(data.prediccionDaily.data) %>
+                  },{
+                    label: 'Value calculated by Constant Growth Model',
+                      fill: false,
+                      yAxisID: 'B',
+                      // cubicInterpolationMode: 'default',
+                      borderColor: 'rgba(225, 70, 44,0.5)',
+                      data: <%- JSON.stringify(data.prediccionGrowth.data) %>
                   }
+                  // ,{
+                  //   label: 'Prediction (Polynomial)',
+                  //     fill: false,
+                  //     yAxisID: 'A',
+                  //     // cubicInterpolationMode: 'default',
+                  //     borderColor: 'rgba(155, 155, 155,0.5)',
+                  //     data: <%- JSON.stringify(data.prediccionPolDaily.data) %>
+                  // }
                 ]
               },
               options: {
                   responsive: true,
                   scales: {
                       yAxes: [{
+                        id: 'A',
                         display: true,
                         scaleLabel:{
                           display: true,
-                          labelString: 'Value'
+                          labelString: 'Quantity'
                         },
                         ticks: {
                           beginAtZero:false,
@@ -127,7 +153,24 @@
                             return '$'+ value.toFixed(2).replace(/(\d)(?=(\d{3})+\.)/g, '$1,');
                           }
                         }
-                      }],
+                      },
+                      {
+                        id: 'B',
+                        display: true,
+                        position: 'right',
+                        scaleLabel:{
+                          display: true,
+                          labelString: 'Constant Growth Model predicted Mkr Value '
+                        },
+                        ticks: {
+                          beginAtZero:false,
+                          callback: (value, index,values)=>{
+                            return '$'+ value.toFixed(2).replace(/(\d)(?=(\d{3})+\.)/g, '$1,');
+                          }
+                        }
+                      }
+                    
+                    ],
                       xAxes: [{
                         display: true,
                         scaleLabel: {
